--- a/template.html
+++ b/template.html
@@ -4,6 +4,13 @@
     <!-- Required meta tags 555-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/bootstrap.min.css"  crossorigin="anonymous">
@@ -15,6 +22,7 @@
   <body>
      <div class="container">
       <nav aria-label="Page navigation example">
+        <br>
         <ul class="pagination">
 
           {% if index == 1 %}
