23 step delete small

--- a/pages/index1.html
+++ b/pages/index1.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Алиби</h5>
                       <p class="card-text">ИВАНОВ Сергей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Алиби.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Алиби.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Бич небесный</h5>
                       <p class="card-text">Стерлинг Брюс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Бич_небесный.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Бич_небесный.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Цена посвящения: Серый Ангел</h5>
                       <p class="card-text">Маркеев Олег Георгиевич</p>
                       <p class="card-text"><span class="badge badge-light">Боевики</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Цена_посвящения_Серый_Ангел.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Цена_посвящения_Серый_Ангел.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Цена посвящения: Время Зверя</h5>
                       <p class="card-text">Маркеев Олег Георгиевич</p>
                       <p class="card-text"><span class="badge badge-light">Боевики</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Цена_посвящения_Время_Зверя.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Цена_посвящения_Время_Зверя.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Дело Джен, или Эйра немилосердия</h5>
                       <p class="card-text">Fforde Jasper</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Дело_Джен,_или_Эйра_немилосердия.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Дело_Джен,_или_Эйра_немилосердия.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Фабрика дьявола</h5>
                       <p class="card-text">Мар Курт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Фабрика_дьявола.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Фабрика_дьявола.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Говорящий камень</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Говорящий_камень.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Говорящий_камень.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">И Он пришел... ИТ-роман</h5>
                       <p class="card-text">Аджалов Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/И_Он_пришел..._ИТ-роман.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/И_Он_пришел..._ИТ-роман.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Казнить нельзя помиловать</h5>
                       <p class="card-text">Чертанов Максим</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Казнить_нельзя_помиловать.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Казнить_нельзя_помиловать.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Ночь, которая умирает</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Ночь,_которая_умирает.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Ночь,_которая_умирает.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
