--- a/pages/index2.html
+++ b/pages/index2.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Нырок в забвение</h5>
                       <p class="card-text">Хенрик Ричард</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Политические детективы</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Нырок_в_забвение.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Нырок_в_забвение.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Поющий колокольчик</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Поющий_колокольчик.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Поющий_колокольчик.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Продается тело Христа</h5>
                       <p class="card-text">Аджалов Владимир Исфандеярович</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Продается_тело_Христа.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Продается_тело_Христа.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Роковой поцелуй</h5>
                       <p class="card-text">Патрацкая Наталья</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span><span class="badge badge-light">Прочие приключения</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Роковой_поцелуй.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Роковой_поцелуй.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Те, кто против нас</h5>
                       <p class="card-text">Руденко Борис</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Те,_кто_против_нас.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Те,_кто_против_нас.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Телепортеры, внимание!</h5>
                       <p class="card-text">Мар Курт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Телепортеры,_внимание!.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Телепортеры,_внимание!.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Зодиак</h5>
                       <p class="card-text">Стивенсон Нил</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Зодиак.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Зодиак.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">Der Schwarm</h5>
                       <p class="card-text">Schaetzing Frank</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Justitia - est Часть 1</h5>
                       <p class="card-text">Картман Эрика</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Justitia_-_est_Часть_1.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Justitia_-_est_Часть_1.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Lost in a Good Book</h5>
                       <p class="card-text">Fforde Jasper</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
