--- a/pages/index3.html
+++ b/pages/index3.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Астронавт Джонс</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Астронавт_Джонс.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Астронавт_Джонс.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Будет скафандр - будут и путешествия</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Будет_скафандр_-_будут_и_путешествия.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Будет_скафандр_-_будут_и_путешествия.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Дочь Нефертити</h5>
                       <p class="card-text">Семенова Татьяна</p>
                       <p class="card-text"><span class="badge badge-light">Детская образовательная литература</span><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Дочь_Нефертити.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Дочь_Нефертити.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Наложница императора</h5>
                       <p class="card-text">Семенова Татьяна</p>
                       <p class="card-text"><span class="badge badge-light">Детская образовательная литература</span><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Наложница_императора.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Наложница_императора.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Общая теория Доминант</h5>
                       <p class="card-text">Белохвостов Денис</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Общая_теория_Доминант.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Общая_теория_Доминант.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Программируемый мальчик (педагогическая фантастика)</h5>
                       <p class="card-text">Тюрин Александр Владимирович</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Киберпанк</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Войны Сорока Островов (Часть первая)</h5>
                       <p class="card-text">Лукьяненко Сергей Васильевич</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">Взгляд из сердца</h5>
                       <p class="card-text">Мейстер Максим</p>
                       <p class="card-text"><span class="badge badge-light">Детская проза</span><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочая детская литература</span><span class="badge badge-light">Эзотерика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Взгляд_из_сердца.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Взгляд_из_сердца.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Звездный зверь ( Звездное чудовище)</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Звездный_зверь_(_Звездное_чудовище).txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Звездный_зверь_(_Звездное_чудовище).txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Красный сфинкс</h5>
                       <p class="card-text">Прашкевич Геннадий Мартович</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочая документальная литература</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
