--- a/pages/index5.html
+++ b/pages/index5.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">14-я книга. Барабаны Таланов</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/14-я_книга._Барабаны_Таланов.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/14-я_книга._Барабаны_Таланов.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">15-я книга. Школа арханелов</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/15-я_книга._Школа_арханелов.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/15-я_книга._Школа_арханелов.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">2-я книга. Сенсетивы Галана</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/2-я_книга._Сенсетивы_Галана.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/2-я_книга._Сенсетивы_Галана.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">4-я книга. Экспедиция на Голубой планетоид</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/4-я_книга._Экспедиция_на_Голубой_планетоид.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/4-я_книга._Экспедиция_на_Голубой_планетоид.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">5-я книга. В подземельях Бидрупа.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/5-я_книга._В_подземельях_Бидрупа.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/5-я_книга._В_подземельях_Бидрупа.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">53-я американская мечта</h5>
                       <p class="card-text">Салли Джейли</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/53-я_американская_мечта.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/53-я_американская_мечта.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">6-я книга. Сражение за Бидруп.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/6-я_книга._Сражение_за_Бидруп.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/6-я_книга._Сражение_за_Бидруп.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">64-клеточный дурдом</h5>
                       <p class="card-text">Лейбер Фриц</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/64-клеточный_дурдом.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/64-клеточный_дурдом.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">7-я книга. День Откровения</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/7-я_книга._День_Откровения.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/7-я_книга._День_Откровения.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">8-я книга. Полет Уригленны.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/8-я_книга._Полет_Уригленны.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/8-я_книга._Полет_Уригленны.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
