--- a/pages/index6.html
+++ b/pages/index6.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">9-я книга. Тарат Зурбин</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/9-я_книга._Тарат_Зурбин.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/9-я_книга._Тарат_Зурбин.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">90х60х90</h5>
                       <p class="card-text">Берендеев Кирилл</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/90х60х90.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/90х60х90.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">995-й святой</h5>
                       <p class="card-text">Цветков Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/995-й_святой.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/995-й_святой.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">А, Критика!</h5>
                       <p class="card-text">Еськов Кирилл</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А,_Критика!.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А,_Критика!.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">АНТОЛОГИЯ СКАНДИНАВСКОЙ ФАНТАСТИКИ</h5>
                       <p class="card-text">Бойе Карин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/АНТОЛОГИЯ_СКАНДИНАВСКОЙ_ФАНТАСТИКИ.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/АНТОЛОГИЯ_СКАНДИНАВСКОЙ_ФАНТАСТИКИ.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">А бог един</h5>
                       <p class="card-text">Амнуэль Песах</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_бог_един.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_бог_един.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">А была ли тайна</h5>
                       <p class="card-text">Купцов Василий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_была_ли_тайна.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_была_ли_тайна.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">А человек забудет</h5>
                       <p class="card-text">Трусов Сергей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_человек_забудет.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_человек_забудет.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">А что будет</h5>
                       <p class="card-text">Браун Фредерик</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_что_будет.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_что_будет.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">А что с ними делать дальше?</h5>
                       <p class="card-text">Фостер Алан Дин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_что_с_ними_делать_дальше.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_что_с_ними_делать_дальше.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
