--- a/pages/index9.html
+++ b/pages/index9.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">А вы не верили</h5>
                       <p class="card-text">Ягупова Светлана</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_вы_не_верили.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_вы_не_верили.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">А за тобой придет генерал</h5>
                       <p class="card-text">Воробьев Борис</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_за_тобой_придет_генерал.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_за_тобой_придет_генерал.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">А жизнь идёт</h5>
                       <p class="card-text">Бояндин Константин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_жизнь_идёт.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_жизнь_идёт.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Ааст Ллун - архитектор неба</h5>
                       <p class="card-text">Гуревич Георгий Иосифович</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Ааст_Ллун_-_архитектор_неба.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Ааст_Ллун_-_архитектор_неба.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Абадон</h5>
                       <p class="card-text">Купцов Василий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абадон.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абадон.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Абицелла</h5>
                       <p class="card-text">Попогребский П</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абицелла.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абицелла.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Абракадабра</h5>
                       <p class="card-text">Рассел Эрик Фрэнк</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абракадабра.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абракадабра.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">Абсолютная Энциклопедия. Том 2</h5>
                       <p class="card-text">Диксон Гордон</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютная_Энциклопедия._Том_2.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютная_Энциклопедия._Том_2.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Абсолютная гарантия</h5>
                       <p class="card-text">Иванов Борис</p>
                       <p class="card-text"><span class="badge badge-light">Детективная фантастика</span><span class="badge badge-light">Космическая фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютная_гарантия.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютная_гарантия.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Абсолютная полиция</h5>
                       <p class="card-text">Лисин Валерий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютная_полиция.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютная_полиция.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
