--- a/pages/index10.html
+++ b/pages/index10.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Абсолютная правда</h5>
                       <p class="card-text">Коростелев Дмитрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютная_правда.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютная_правда.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Абсолютная пустота (предисловие)</h5>
                       <p class="card-text">Лем Станислав</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютная_пустота_(предисловие).txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютная_пустота_(предисловие).txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Абсолютная технократия</h5>
                       <p class="card-text">Альдани Лино</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютная_технократия.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютная_технократия.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Абсолютно невозможно</h5>
                       <p class="card-text">Силверберг Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютно_невозможно.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютно_невозможно.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Абсолютное Оружие</h5>
                       <p class="card-text">Ершов Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютное_Оружие.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютное_Оружие.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Абсолютное оружие Горгон</h5>
                       <p class="card-text">Щербаков Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютное_оружие_Горгон.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютное_оружие_Горгон.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Абсолютное счастье</h5>
                       <p class="card-text">Якименко Константин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютное_счастье.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютное_счастье.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">Абсолютное время</h5>
                       <p class="card-text">Бялецкий Януш</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютное_время.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютное_время.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Абсолютный хрум</h5>
                       <p class="card-text">Тарабанов Дмитрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абсолютный_хрум.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абсолютный_хрум.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Абстиненция</h5>
                       <p class="card-text">Нестеренко Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Абстиненция.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Абстиненция.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
