--- a/pages/index4.html
+++ b/pages/index4.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Сборник рассказов и повестей</h5>
                       <p class="card-text">ЛУКИНА Любовь</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Публицистика</span><span class="badge badge-light">Юмористическая фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/Сборник_рассказов_и_повестей.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/Сборник_рассказов_и_повестей.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">...Яко помниши его</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/...Яко_помниши_его.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/...Яко_помниши_его.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">...На Вавилон</h5>
                       <p class="card-text">Силверберг Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/...На_Вавилон.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/...На_Вавилон.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">...Вставьте шплинт А в гнездо Б...</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/...Вставьте_шплинт_А_в_гнездо_Б.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/...Вставьте_шплинт_А_в_гнездо_Б.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">...к звездам!</h5>
                       <p class="card-text">Радутный Радий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/...к_звездам!.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/...к_звездам!.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">1-книга. Весна на Галане</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/1-книга._Весна_на_Галане.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/1-книга._Весна_на_Галане.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">10-я книга. Варкенские перемены.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/10-я_книга._Варкенские_перемены.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/10-я_книга._Варкенские_перемены.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">11-я книга. Рождение империи сенсетивов</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/11-я_книга._Рождение_империи_сенсетивов.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/11-я_книга._Рождение_империи_сенсетивов.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">13-я книга. Галанское сватовство</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/13-я_книга._Галанское_сватовство.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/13-я_книга._Галанское_сватовство.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">132-й</h5>
                       <p class="card-text">Макаров Андрей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/132-й.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/132-й.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
