--- a/pages/index7.html
+++ b/pages/index7.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">А дом стоит себе спокойно (Вечный дом)</h5>
                       <p class="card-text">Ван Вогт Альфред</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_дом_стоит_себе_спокойно_(Вечный_дом).txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_дом_стоит_себе_спокойно_(Вечный_дом).txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">А еще мы выгуливаем собак</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_еще_мы_выгуливаем_собак.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_еще_мы_выгуливаем_собак.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">А где же Рошар</h5>
                       <p class="card-text">Глазков Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_где_же_Рошар.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_где_же_Рошар.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">А и Е</h5>
                       <p class="card-text">Стульник Сергей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_и_Е.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_и_Е.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">А я пойду дальше</h5>
                       <p class="card-text">Лейбер Фриц</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_я_пойду_дальше.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_я_пойду_дальше.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">А как же еще</h5>
                       <p class="card-text">Каттнер Генри</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_как_же_еще.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_как_же_еще.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">А мне до них</h5>
                       <p class="card-text">Корепанов Алексей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_мне_до_них.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_мне_до_них.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">А могла бы и быть</h5>
                       <p class="card-text">Григорьев Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_могла_бы_и_быть.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_могла_бы_и_быть.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">А моя мама - ведьма!</h5>
                       <p class="card-text">Тенн Уильям</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_моя_мама_-_ведьма!.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_моя_мама_-_ведьма!.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">А мы лезем в окно</h5>
                       <p class="card-text">Молзберг Барри</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_мы_лезем_в_окно.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_мы_лезем_в_окно.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
