--- a/pages/index8.html
+++ b/pages/index8.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">А она бежала</h5>
                       <p class="card-text">Бушков Александр Александрович</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">А она уходила</h5>
                       <p class="card-text">Дымов Феликс Яковлевич</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_она_уходила.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_она_уходила.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">А поезд идет</h5>
                       <p class="card-text">Ашкинази Леонид</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_поезд_идет.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_поезд_идет.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">А роза упала на лапу Азора</h5>
                       <p class="card-text">Осинский Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_роза_упала_на_лапу_Азора.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_роза_упала_на_лапу_Азора.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">А вдруг они победят</h5>
                       <p class="card-text">Белен</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_вдруг_они_победят.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_вдруг_они_победят.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">А вдруг</h5>
                       <p class="card-text">Грешнов Михаил</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_вдруг.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_вдруг.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">А все из-за любви</h5>
                       <p class="card-text">Гуларт Рон</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_все_из-за_любви.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_все_из-за_любви.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">А все остальное - не в счёт</h5>
                       <p class="card-text">Лукин Евгений</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">А всё остальное - не в счёт</h5>
                       <p class="card-text">Лукин Евгений</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="None" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="None" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">А всходы будут не скоро</h5>
                       <p class="card-text">Чешко Федор</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><small class="text-muted"><a href="/static/books/А_всходы_будут_не_скоро.txt" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="/static/books/А_всходы_будут_не_скоро.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
