--- a/template.html
+++ b/template.html
@@ -58,7 +58,7 @@
                       <h5 class="card-title">{{book.title}}</h5>
                       <p class="card-text">{{book.author}}</p>
                       <p class="card-text">{% for book in book.genres %}<span class="badge badge-light">{{book}}</span>{% endfor %}</p>
-                      <p class="card-text"><small class="text-muted"><a href="{{book.book_path}}" target="_blank">Читать</a> </small></p>
+                      <p class="card-text"><a href="{{book.book_path}}" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
